<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_view_data"
        android:icon="@drawable/ic_remove_red_eye_black_24dp"
        android:title="@string/title_view_data" />
    <item
        android:id="@+id/navigation_scouting"
        android:icon="@drawable/binoculars"
        android:title="@string/title_scouting"/>
    <item
        android:id="@+id/navigation_benchmarking"
        android:icon="@drawable/ic_compare_arrows_black_24dp"
        android:title="@string/title_benchmarking"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
