<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_no_scout"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sparx1126.a2020_scouting.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_view_data"
        android:name="com.sparx1126.a2020_scouting.Fragments.ViewDataFragment"
        android:label="@string/title_view_data"
        tools:layout="@layout/fragment_empty" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sparx1126.a2020_scouting.Fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_empty" />
</navigation>